--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<meta name="apple-mobile-web-app-title" content="手机端标题">
+	<meta name="apple-mobile-web-app-title" content="第一次520">
 	<meta http-equiv="Cache-Control" content="no-siteapp">
 	<meta name="author" content="鄧先森">
 	<link rel='stylesheet' href='css/css.css' type='text/css'/>
@@ -14,7 +14,7 @@
 	<!--[if lte IE 9]><link rel="stylesheet" href="css/ie9.css" /><![endif]-->
     <!--[if lte IE 8]><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
 	<link rel="shortcut icon" type="image/ico" href="images/favicon.ico">
-	<title>网页端标题</title>
+	<title>邢哲的老婆是赵玲</title>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/skel.min.js"></script>
 	<script src="js/util.js"></script>
